# InterProcess-and-IntraProcess-Messaging-in-CPP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ctask.txt  start.sh
include/: Logger.h  Player.h  PlayerManager.h
src/: Logger.cpp  Player.cpp  PlayerManager.cpp  main.cpp
test/: test_Logger.cpp  test_Player.cpp
